# vtracer

./: Cargo.toml
.github/workflows/: python.yml  release.yml
cmdapp/: Cargo.toml
webapp/: Cargo.toml
webapp/src/: ffi.rs  lib.rs
webapp/src/conversion/: binary_image.rs  color_image.rs  mod.rs
