[package]
name = "vtracer"
description = "A cmd app to convert images into vector graphics."

[dependencies]
clap = "2.33.3"
image = "0.23.10"
visioncortex = { version = "0.8.8" }
fastrand = "1.8"
pyo3 = { version = "0.19.0", optional = true }

[features]
python-binding = ["pyo3"]

[lib]
name = "vtracer"
crate-type = ["rlib", "cdylib"]